--- a/manejoExcelsUTIL.ipynb
+++ b/manejoExcelsUTIL.ipynb
@@ -1466,7 +1466,17 @@
    "id": "6fb24156-0a6c-4736-a509-c493f1c83e87",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 1) Filas OK en ambas tablas\n",
+    "df_ok = resultado[resultado[\"resultado_comparacion\"].eq(\"OK\")].copy()\n",
+    "\n",
+    "# 2) Filas que están en ambas pero con diferencias\n",
+    "df_discrep = resultado[resultado[\"resultado_comparacion\"].eq(\"DISCREPANCIA\")].copy()\n",
+    "\n",
+    "# 3) Filas que solo están en una tabla (cadenas del tipo \"Está en ... pero no en ...\" o \"No está en ...\")\n",
+    "pat_solo_una = r\"(?:\\bEstá en\\b|\\bNo está en\\b)\"\n",
+    "df_solo_una = resultado[resultado[\"resultado_comparacion\"].astype(str).str.contains(pat_solo_una, na=False)].copy()"
+   ]
   }
  ],
  "metadata": {
